--- a/calculador1.css
+++ b/calculador1.css
@@ -1,9 +1,89 @@
 *{
     font-family: 'Roboto', sans-serif;
+    color: #FFFFFF;
+    text-align: center;
 }
-.flexbox{
-    display: flex;
-    flex-wrap: nowrap;
-    font-size: 43.78px ;
-
+button{
+    background: #50546F;
+    border: 1px solid #C4C4C4;
+    border-radius: 7px;
+    font-family: 'Roboto Mono';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 43.7838px;
+    line-height: 58px;
+}
+.corpo{
+    box-sizing: border-box;
+    position: relative;
+    width: 535px;
+    height: 850px;
+    background: #2A314E;
+    border: 2px solid #C4C4C4;
+    border-radius: 8px;
+    
+}
+.estrutura{
+    padding-top: 23.72px;
+    padding-left: 39px;
+    display: grid;
+    grid-template-columns: repeat(4, 106px);
+    grid-template-rows: repeat(7, 106px);
+    gap: 9px;
+}
+.viewer{
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: -5 ;
+    height: 127px;
+    left: 25px;
+    top: 38px;
+    justify-content: center;
+    background: #3E445D;
+    border: 1px solid #C4C4C4;
+    border-radius: 7px;
+    font-family: 'Roboto Mono';
+    font-family: 'Roboto Mono';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 43.7838px;
+    line-height: 58px;
+}
+.clear {
+    padding: 33px 32px;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 3;
+}
+#divided{
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 3;
+    grid-row-end: 3;
+}
+#times{
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row-start: 3;
+    grid-row-end: 3;
+}
+#equals{
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 7;
+    grid-row-end: 7;
+    background: #9599AC;
+    border: 1px solid #C4C4C4;
+    border-radius: 7px;
+}
+#plus{
+    grid-column-start: 4;
+    grid-column-end: 4;
+    grid-row-start: 5;
+    grid-row-end: 7;
+    background: #F53360;
+    border: 1px solid #C4C4C4;
+    border-radius: 7px;
 }
