--- a/calculador1.css
+++ b/calculador1.css
@@ -3,6 +3,12 @@
     color: #FFFFFF;
     text-align: center;
 }
+body{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 button{
     background: #50546F;
     border: 1px solid #C4C4C4;
@@ -17,33 +23,24 @@ button{
     box-sizing: border-box;
     position: relative;
     width: 535px;
-    height: 850px;
+    height: 760px;
     background: #2A314E;
     border: 2px solid #C4C4C4;
     border-radius: 8px;
-    
-}
-.estrutura{
-    padding-top: 23.72px;
+    padding-top: 38px;
     padding-left: 39px;
     display: grid;
     grid-template-columns: repeat(4, 106px);
-    grid-template-rows: repeat(7, 106px);
+    grid-template-rows: repeat(6, 106px);
     gap: 9px;
 }
 .viewer{
     grid-column-start: 1;
     grid-column-end: 5;
     grid-row-start: 1;
-    grid-row-end: -5 ;
-    height: 127px;
-    left: 25px;
-    top: 38px;
-    justify-content: center;
     background: #3E445D;
     border: 1px solid #C4C4C4;
     border-radius: 7px;
-    font-family: 'Roboto Mono';
     font-family: 'Roboto Mono';
     font-style: normal;
     font-weight: 500;
@@ -54,26 +51,26 @@ button{
     padding: 33px 32px;
     grid-column-start: 1;
     grid-column-end: 3;
-    grid-row-start: 3;
-    grid-row-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 2;
 }
 #divided{
     grid-column-start: 3;
     grid-column-end: 4;
-    grid-row-start: 3;
-    grid-row-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 2;
 }
 #times{
     grid-column-start: 4;
     grid-column-end: 5;
-    grid-row-start: 3;
-    grid-row-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 2;
 }
 #equals{
     grid-column-start: 3;
     grid-column-end: 5;
-    grid-row-start: 7;
-    grid-row-end: 7;
+    grid-row-start: 6;
+    grid-row-end: 6;
     background: #9599AC;
     border: 1px solid #C4C4C4;
     border-radius: 7px;
@@ -81,8 +78,8 @@ button{
 #plus{
     grid-column-start: 4;
     grid-column-end: 4;
-    grid-row-start: 5;
-    grid-row-end: 7;
+    grid-row-start: 4;
+    grid-row-end: 6;
     background: #F53360;
     border: 1px solid #C4C4C4;
     border-radius: 7px;
